terraform/network.tf
### Network

# Fetch AZs in the current region
data "aws_availability_zones" "available" {}

resource "aws_vpc" "vpc" {
  cidr_block = "172.17.0.0/16"

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags {
    Name      = "vpc"
    Terraform = 1
  }
}

# Create var.az_count private subnets, each in a different AZ
resource "aws_subnet" "private" {
  count             = "${var.az_count}"
  cidr_block        = "${cidrsubnet(aws_vpc.vpc.cidr_block, 8, count.index)}"
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id            = "${aws_vpc.vpc.id}"

  tags {
    Name      = "private-subnet-${count.index}"
    Terraform = 1
  }
}

# Create var.az_count public subnets, each in a different AZ
resource "aws_subnet" "public" {
  count                   = "${var.az_count}"
  cidr_block              = "${cidrsubnet(aws_vpc.vpc.cidr_block, 8, var.az_count + count.index)}"
  availability_zone       = "${data.aws_availability_zones.available.names[count.index]}"
  vpc_id                  = "${aws_vpc.vpc.id}"
  map_public_ip_on_launch = true

  tags {
    Name      = "public-subnet-${count.index}"
    Terraform = 1
  }
}

# IGW for the public subnet
resource "aws_internet_gateway" "internet-gw" {
  vpc_id = "${aws_vpc.vpc.id}"

  tags {
    Name      = "internet-gateway"
    Terraform = 1
  }
}

# Route the public subnet traffic through the IGW
resource "aws_route" "route-to-internet-gw" {
  route_table_id         = "${aws_vpc.vpc.main_route_table_id}"
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = "${aws_internet_gateway.internet-gw.id}"
}

# Create a NAT gateway with an EIP for each private subnet to get internet connectivity
resource "aws_eip" "private-nat" {
  count      = "${var.az_count}"
  vpc        = true
  depends_on = ["aws_internet_gateway.internet-gw"]

  tags {
    Name      = "private-nat-${count.index}"
    Terraform = 1
  }
}

resource "aws_nat_gateway" "private" {
  count         = "${var.az_count}"
  subnet_id     = "${element(aws_subnet.public.*.id, count.index)}"
  allocation_id = "${element(aws_eip.private-nat.*.id, count.index)}"

  tags {
    Name      = "private-${count.index}"
    Terraform = 1
  }
}

# Create a new route table for the private subnets
# And make it route non-local traffic through the NAT gateway to the internet
resource "aws_route_table" "private" {
  count  = "${var.az_count}"
  vpc_id = "${aws_vpc.vpc.id}"

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = "${element(aws_nat_gateway.private.*.id, count.index)}"
  }

  tags {
    Name      = "private-${count.index}"
    Terraform = 1
  }
}

# Explicitely associate the newly created route tables to the private subnets
resource "aws_route_table_association" "private-subnet-associations" {
  count          = "${var.az_count}"
  subnet_id      = "${element(aws_subnet.private.*.id, count.index)}"
  route_table_id = "${element(aws_route_table.private.*.id, count.index)}"
}
